# wordlebot

./: .gitignore  README.md  assess_solver.py  information.py  main.py  puzzle.py  pyproject.toml  setup.py  solver.py  solver_cli.py  wordle_and_trees.ipynb  wordle_color.py
solver/: assess_solver.py  information.py  puzzle.py  solver.py  solver_cli.py
tests/: test_information.py  test_puzzle.py  test_solver.py
