[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "wordlebot-cli"
version = "1.0.0"
authors = [{name="Will Beckman", email="will@willbeckman.com" }]
description = "Wordlebot - solves wordle puzzles using information gain"
readme = "README.md"
dependencies = ["fastenum"]
requires-python = ">=3.8"

[project.scripts]
wordlebot = "solver.solver_cli:solve"